--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	  <div id="contact">
 		  <!--────social media links─────-->
 		   <h3>Contact.<hr></h3>
-		   <p>Feel free to contact me on my social media.</p>
+		   <p>Feel free to contact us on our social media.</p>
 		    <div class="social-media">
 			  <a href="https://discord.gg/Gn9HZ7v7FR" target="_blank"><i class='fab fa-discord'></i></a>
 		    </div>
